apps/web-giddh/src/assets/css/style-1.scss
/* ... */
.modal-dialog.universal_modal .shortcuts {
    background: $alice-blue;
    border-top: none;
    margin: 0;
    padding: 12px 16px 12px 20px;
    color: $gray;
    font-size: 12px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    text-align: right;
}

perfect-scrollbar.ps-show-active
    > .ps.ps--active-y
    > .ps-overlay:not(.ps-at-top)
    .ps-indicator-top,
perfect-scrollbar.ps-show-active
    > .ps.ps--active-y
    > .ps-overlay:not(.ps-at-bottom)
    .ps-indicator-bottom {
    opacity: 0;
}

.sub-menu-nav li > a {
    padding: 5px 12px;
    color: $night-rider;
    display: block;
}

.sub-menu-nav li > a:hover {
    background: $vivid-blue;
}

.no-dbl-click-select {
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.custom-item:hover , .discount-item:hover {
    background-color: $lavender !important;
    color: $chetwode-blue !important;
    &:hover {
        .pull-left.text-ellipsis {
            color: $chetwode-blue !important;
        }
    }
}

.or-line::before {
    content: " ";
    border-bottom: 1px solid $dim-gray;
    display: inline-block;
    width: 57px;
    margin-right: 13px;
}

.or-line::after {
    content: "";
    border-bottom: 1px solid $dim-gray;
    display: inline-block;
    width: 57px;
    margin-left: 13px;
}

.or-line {
    display: flex;
    align-items: center;
    color: $dim-gray;
    margin-bottom: 10px;
}

/* my css */

.basic {
    background: $white;
}

.basic thead tr th {
    background: $whisper;
    color: $nero;
    border: 0;
    font-family: "" opensans-semibold "";
    text-transform: capitalize;
}

.basic tbody tr:hover td {
    background: $solitude;
}

body.fixed {
    overflow-y: hidden;
}
#blank-ledger-container tbody tr:empty {
    display: none;
}
#getGroupModal {
    height: 100vh;
}

form#groupDetailForm {
    max-width: 660px;
    width: 100%;
}
.mobile-header {
    display: none;
}
#getGroupModal #middleBody {
    height: 100%;
}
#getGroupModal.get-group-modal #middleBody {
    height: auto;
}
.select2-ledger .menu .item {
    white-space: initial;
}

.left-col-new,
.right-col-new {
    width: 50% !important;
}
/* responsive */

@media (min-width: 768px) {
    .form-inline.financial-select-year .form-group {
        min-width: 195px;
    }
}

@media (max-width: 768px) {
    .mobile-header .upper-layer-header .navbar-nav {
        float: none;
    }
    .desktop-header {
        display: block;
    }

    .mobile-header .btn-xs {
        padding: 3px 8px !important;
    }
    .universal-date {
        margin-right: 0;
    }
}

@media only screen and (max-width: 1024px) {
    .modal-dialog.universal_modal .shortcuts {
        display: none;
    }
    .pd-t1-md{
        padding-top: 10px;
    }
}
@media(max-width:1024px){
    #inventory-sidebar{
        .parent-group {
            >.stock-grp-list {
                >li {
                    display: block !important;
                }
            }
        }
    }
}
@media only screen and (max-width: 767px) {
    .table-container.trial-balance{
        .table-responsive{
            display: table;
        }
        section {
            div{
                div{
                    &:first-child{
                        white-space: normal !important;
                        word-break: break-word;
                        width: 20% !important;
                        max-width: 20% !important;
                        min-width: 150px;
                    }
                    white-space: nowrap !important;
                    width: 30% !important;
                    max-width: 30% !important;
                    min-width: 150px;

                }
            }
        }
        .table-footer {
            th{
                &:first-child{
                    white-space: normal !important;
                    word-break: break-word;
                    width: 20% !important;
                    max-width: 20% !important;
                    min-width: 150px;
                }
                white-space: nowrap;
                width: 30% !important;
                max-width: 30% !important;
                min-width: 150px;
            }
        }
        .row{
            flex-wrap: nowrap;
        }
    }

    .mobile-header {
        display: block;
        position: fixed !important;
        top: 0;
        z-index: 101;
    }
    .desktop-header {
        display: none;
    }
    .ledger-book .h-table tbody .ledger-row td {
        position: relative;
        display: block;
        width: 100%;
        max-width: 100% !important;
        border: 0px;
        text-align: left;
    }
    .ledger-book .h-table tbody .ledger-row td:after {
        content: attr(data-title);
        position: absolute;
        left: 10px;
        top: 10px;
        font-weight: bold;
    }

    .transactions-page .left-col-new,
    .transactions-page .right-col-new {
        padding-bottom: 20px;
    }
    .ledger-book .h-table tbody .ledger-row {
        width: 100%;
        border-bottom: 1px solid $gainsboro;
    }
    bs-daterangepicker-container,
    bs-datepicker-container {
        overflow-y: auto;
        height: auto;
        box-shadow: 0 0 10px 0 $wistful;
        top: 50% !important;
        left: 50% !important;
        transform: translate(-50%, -50%) !important;
    }

    .no-data {
        font-size: 26px;
    }

    #setting-tab .nav > li > a:hover {
        color: inherit !important;
    }
}

@media (min-width: 768px) and (max-width:1019px){
    bs-datepicker-container{
        left: 100px !important;
    }
}


.valid-tooltip, .tooltip, .tooltip-inner{
    font-size:12px !important;
}

